# game_engine

./: .gitignore  CMakeLists.txt  Makefile
src/: glad.c  main.cpp
src/engine/: api.hpp  events.hpp  fps.hpp  utils.hpp  verticle.hpp  window.cpp  window.hpp
src/engine/shaders/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  default.frag  shader.cpp  shader.hpp
src/engine/shaders/content/: default.frag  default.vert
src/glad/: glad.h
src/lib/: glad.c
